Несколько изменений - добавлены изображения - исправлен алгоритм задания событий (баг)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <button class="add_to_cart" zero-cart-id="1" , zero-cart-name="Абонемент на месяц" zero-cart-price="3300">Добавить в
+    <button class="add_to_cart" zero-cart-id="1" zero-cart-image="https://lipsum.app/640x480"
+        zero-cart-name="Абонемент на месяц" zero-cart-price="3300">Добавить в
         корзину</button>
     <button class="remove_from_cart" zero-cart-id="1" , zero-cart-name="Абонемент на месяц"
         zero-cart-price="3300">Удалить из корзины</button>
