--- a/index.html
+++ b/index.html
@@ -6,19 +6,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Демонстрация функций</title>
+
+    <!-- Подключение Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
-<body>
-    <button class="add_to_cart" zero-cart-id="1" zero-cart-image="https://lipsum.app/640x480"
-        zero-cart-name="Абонемент на месяц" zero-cart-price="3300">Добавить в
-        корзину</button>
-    <button class="remove_from_cart" zero-cart-id="1" , zero-cart-name="Абонемент на месяц"
-        zero-cart-price="3300">Удалить из корзины</button>
+<body class="p-5">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header">Товары</div>
+                    <div class="card-body">
+                        <!-- Класс "add_to_cart" был заменен на атрибут "zero-do-cart-add" -->
+                        <!-- Добавлен атрибут типа -->
+                        <button zero-do-cart-add class="btn btn-primary" zero-cart-id="1" zero-cart-type="house"
+                            zero-cart-image="https://lipsum.app/100x100" zero-cart-name="Абонемент на месяц"
+                            zero-cart-price="3300">Добавить абонемент</button>
 
-    <div id="cart-window"></div>
-    <p zero-cart-amount></p>
+                        <!-- Класс "add_to_cart" был заменен на атрибут "zero-do-cart-add" -->
+                        <!-- Добавлен атрибут типа -->
+                        <button zero-cart-additional-statement="additionalStatement" zero-do-cart-add
+                            class="btn btn-primary" zero-cart-id="2" zero-cart-type="service"
+                            zero-cart-image="https://lipsum.app/100x100" zero-cart-name="Дополнительный урок"
+                            zero-cart-price="1200">Добавить
+                            доп. урок</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-header">Корзина</div>
+                    <div class="card-body">
+                        <div id="cart-wrapper">
+                            <div id="cart-window"></div>
+                            <p>Итог: <strong zero-cart-amount></strong></p>
+                            <div class="d-flex">
+                                <!-- 
+                                    Для того, чтобы выделить кнопку "оплатить" 
+                                    теперь есть аттрибут "zero-do-cart-payment"
+
+                                    По-умолчанию, если корзина пустая, эта кнопка выключена
+                                -->
+                                <button zero-do-cart-payment class="btn btn-primary ms-auto">Оплатить (кнопка отключится
+                                    в случае пустой корзины)</button>
+                            </div>
+                            <div class="d-flex">
+                                <!-- 
+                                    Для того, чтобы выделить кнопку "оплатить" 
+                                    теперь есть аттрибут "zero-do-cart-payment"
+
+                                    По-умолчанию, если корзина пустая, то с 
+                                    аттрибутом "zero-cart-hide-if-empty" кнопка пропадет
+                                -->
+                                <button zero-do-cart-payment zero-cart-hide-if-empty
+                                    class="btn btn-primary ms-auto">Оплатить (кнопка будет
+                                    скрыта в случае пустой корзины)</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="cart.module.js"></script>
+
+    <script>
+        // Данное дополнительное условие определяет будет ли добавлен
+        // товар в корзину или нет
+        var additionalStatement = () => {
+            // Мы обращаемся к глобальному массиву с корзиной
+            // в ней мы собираем все объекты (фильтруем) с типом "house", т.е. дом
+            // и если их число === 0, тогда мы не можем добавить этот товар и возвращаем false
+            // в остальных случаях возвращаем true (это важно, чтобы все корректно работало)
+            if (window.cart.filter(x => x.type === 'house').length === 0) {
+                alert('Для начала выберите абонемент!')
+                return false;
+            }
+
+            return true;
+        }
+    </script>
 </body>
 
 </html>
